add player widget
add amazon links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <img src="images/kouvradio-ericpolley.png" alt="kouvradio" meta property="og:image"  class="hide">
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
@@ -21,7 +20,6 @@
   </head>
 
   <body class="container">
-   
     <header>
       <!--TOP NAV STARTS-->
       <div class="row">
@@ -58,7 +56,7 @@
 
         <p>
           <a
-            href="https://www.amazon.com/gift-cards/b?ie=UTF8&node=2238192011&linkCode=sl2&tag=unboxingma00d-20&linkId=f86dbe2d182c9edcfa06fc07ef7cd627&language=en_US&ref_=as_li_ss_tl"
+            href="https://amzn.to/3yRNjhV"
             target="_blank"
             rel="noopener noreferrer"
             class="navItem"
@@ -93,10 +91,10 @@
           Vancouver, WA 98668
           </div>
           <div class="col-6">
-          <img src="images/wayne.png" alt="Wayne" />
+          <img src="images/kouvradio-ericpolley.png" alt="Wayne" />
         </div>
         </p>
-        <p>© copyright Wayne Roche 2022</p>
+        <p>© copyright WRSservices 2022</p>
       </div>
 
       <!--ABOUT US    END-->
@@ -140,11 +138,11 @@
 
       <!--PLAYER CODE GOES HERE-->
       <div class="player row flex align-items-center">
-        <h3>Player 1</h3>
+       <iframe width="800" height="296" frameborder="0" src="https://live365.com/embed/player.html?station=a90077&s=xl&m=dark"></iframe>
       </div>
 
       <div class="player2 row flex align-items-center">
-        <h3>Music Player2</h3>
+        <iframe width="200" height="580" frameborder="0" src="https://live365.com/embed/player.html?station=a90077&s=sm&m=dark"></iframe>
       </div>
 
       <!--PLAYER ENDS HERE-->
@@ -174,7 +172,7 @@
       <a href="http://kouvradio.com" target="_blank" rel="noopener noreferrer">
         <img class="imgSml" src="images/d.png" alt="d" />
       </a>
-      <div class="text-erp"> <a href="http://ericpolley.com" target="_blank" rel="noopener noreferrer">Website created by Eric Polley</a> </div>
+      <div class="text-erp"> <a href="http://ericpolley.com" target="_blank" rel="noopener noreferrer">Website created by Eric Polley</a> <a>As an Amazon Associate I earn from qualifying purchases.</a> </div>
 
      
     </footer>
